<resources>
    <string name="app_name">BoyCotter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_monkey">Hello Monkey</string>
    <string name="installed_apps">Installed Chinese Apps</string>
    <string name="chinese_apps">Chinese apps</string>
    <string name="all_apps">All apps</string>
    <string name="icon_desc">This app is made in or belong to china in some or other way</string>
    <string name="boiler_appName">XYZ app</string>
    <string name="alternative_of_xyz_app">Recommended Alternatives</string>
    <string name="uninstall">Uninstall</string>
    <string name="_4_5_5">4.5/5</string>
    <string name="_4m">4M+</string>
    <string name="alternative_app">Alternative app</string>
    <string name="_4_5">4.5</string>
    <string name="install">Install</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">"  No internet connection  "</string>
    <string name="install_alternatives">Install Alternatives</string>
    <string name="install_alternative_text">Once this app is uninstalled, you will not see any suggestions related to it</string>
    <string name="alert_positive_text">Ok, I understand</string>
    <string name="boycotter">Boycotter</string>
    <string name="text_boycott">Congratulations on your very first step\ntowards boycott</string>
    <string name="iamboycotter">#iamboycotter\n#boycotterApp</string>
    <string name="score">Score</string>
    <string name="share_to_the_world">Share to the world</string>
    <string name="app_uninstall_count">App uninstall count</string>
    <string name="victory">Victory!</string>
    <string name="share_body_text">First step towards boycott\nUninstalled Chinese apps using Boycotter.   #bulletSeNahiWalletSe</string>
    <string name="share_boycott_score">Share boycott score</string>
    <string name="congrats">Congratulations!</string>
    <string name="no_way">No way!</string>
    <string name="sorry_to_say">SORRY TO SAY</string>
    <string name="no_apps_installed">You have not uninstalled any app(s)</string>
    <string name="_amazing">Amazing</string>
    <string name="wow">Wow! No Chinese app(s) installed on your device </string>
    <string name="go_to_score_board">Go to score board</string>
    <string name="no_chinese_app_s_found">No Chinese app(s) found</string>
    <string name="server_not_responding">Server not responding</string>
    <string name="no_response">No response</string>
    <string name="uninstall_success">Uninstall success</string>
    <string name="uninstall_failed">Uninstall failed</string>
    <string name="uninstalled_chinese_apps_s">Uninstalled Chinese apps(s)</string>
    <string name="appreciation">Appreciation</string>
    <string name="all_the_chinese_apps_have_been_uninstalled">All the Chinese apps have been uninstalled</string>
    <string name="no_alternatives_available">"  No alternatives available"</string>
    <string name="no_chinese_apps">No Chinese app(s)</string>
    <string-array name="credits">
        <item>Icon Medal By Eucalyp from www.flaticon.com</item>
        <item>Icon Calm by Becris from www.flaticon.com</item>
    </string-array>
</resources>