<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.FragmentNoChineseApps">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/calm_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:src="@drawable/ic_calm"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_chinese_app_found_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_chinese_app_s_found"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calm_char"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_goto_scoreBoard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="40"
        app:layout_constraintWidth_max="200dp"
        android:text="@string/go_to_score_board"
        app:cornerRadius="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_chinese_app_found_txt"/>
</androidx.constraintlayout.widget.ConstraintLayout>